피드 목록 조회 API 개선: 사용자 ID 기반 좋아요 정보 추가
- FeedOpenApiController에서 getFeedList 메서드에 HttpServletRequest를 추가하여 사용자 ID를 헤더에서 가져오도록 수정하였습니다.
- FeedOpenApiControllerIfs 인터페이스의 getFeedList 메서드 시그니처를 업데이트하여 HttpServletRequest를 포함하였습니다.
- FeedRepository에서 findAll 메서드를 수정하여 사용자 ID를 인자로 받아 좋아요 정보를 함께 조회하도록 개선하였습니다.
- FeedRepositoryImpl에서 사용자 ID에 따라 피드의 좋아요 여부를 설정하는 로직을 추가하였습니다.
- FeedSimpleResponseDto에 isLiked 필드를 추가하고, 해당 필드의 setter 메서드를 구현하였습니다.