@@ -12,6 +12,7 @@ import com.devgang.marketduck.domain.category.entity.QGenreCategory;
 import com.devgang.marketduck.domain.category.entity.QGoodsCategory;
 import com.devgang.marketduck.domain.feed.entity.Feed;
 import com.devgang.marketduck.domain.feed.entity.QFeed;
+import com.devgang.marketduck.domain.feed.entity.QFeedLike;
 import com.devgang.marketduck.domain.image.entity.FeedImage;
 import com.devgang.marketduck.domain.image.entity.QFeedImage;
 import com.devgang.marketduck.domain.image.repository.FeedImageJpaRepository;
@@ -28,10 +29,11 @@ import org.springframework.stereotype.Repository;
 
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 @Repository
 @RequiredArgsConstructor
-public class FeedRepositoryImpl implements FeedRepository{
+public class FeedRepositoryImpl implements FeedRepository {
 
     private final JPAQueryFactory queryFactory;
 
@@ -46,19 +48,48 @@ public class FeedRepositoryImpl implements FeedRepository{
     QUser user = QUser.user;
     QGenreCategory genre = QGenreCategory.genreCategory;
     QGoodsCategory goods = QGoodsCategory.goodsCategory;
+    QFeedLike feedLike = QFeedLike.feedLike;
 
     @Override
-    public Page<FeedSimpleResponseDto> findAll(FeedSearchDto dto) {
+    public Page<FeedSimpleResponseDto> findAll(FeedSearchDto dto, Long userId) {
         Pageable pageable = PageRequest.of(dto.getPage(), 10);
 
         JPAQuery<Feed> query = buildFeedQuery(dto, false); // includeDeleted = false
 
         long total = query.fetchCount();
-        List<FeedSimpleResponseDto> content = query
+        List<Feed> feeds = query
                 .offset(pageable.getOffset())
                 .limit(pageable.getPageSize())
-                .fetch()
-                .stream().map(FeedSimpleResponseDto::of).toList();
+                .fetch();
+
+        // userId가 null이 아니면 좋아요 정보를 함께 조회
+        List<FeedSimpleResponseDto> content;
+        if (userId != null) {
+            // 사용자가 좋아요한 피드 ID 목록 조회
+            List<Long> likedFeedIds = queryFactory
+                    .select(feedLike.feed.feedId)
+                    .from(feedLike)
+                    .where(feedLike.user.userId.eq(userId))
+                    .fetch();
+
+            // 피드마다 좋아요 여부 설정
+            content = feeds.stream()
+                    .map(feedEntity -> {
+                        FeedSimpleResponseDto feedSimpleDto = FeedSimpleResponseDto.of(feedEntity);
+                        feedSimpleDto.setLiked(likedFeedIds.contains(feedEntity.getFeedId()));
+                        return feedSimpleDto;
+                    })
+                    .collect(Collectors.toList());
+        } else {
+            // 로그인하지 않은 사용자는 모든 피드에 대해 좋아요 false 설정
+            content = feeds.stream()
+                    .map(feedEntity -> {
+                        FeedSimpleResponseDto feedSimpleDto = FeedSimpleResponseDto.of(feedEntity);
+                        feedSimpleDto.setLiked(false);
+                        return feedSimpleDto;
+                    })
+                    .collect(Collectors.toList());
+        }
 
         return new PageImpl<>(content, pageable, total);
     }
@@ -70,15 +101,22 @@ public class FeedRepositoryImpl implements FeedRepository{
         JPAQuery<Feed> query = buildFeedQuery(dto, true); // includeDeleted = true
 
         long total = query.fetchCount();
-        List<FeedSimpleResponseDto> content = query
+        List<Feed> feeds = query
                 .offset(pageable.getOffset())
                 .limit(pageable.getPageSize())
-                .fetch()
-                .stream().map(FeedSimpleResponseDto::of).toList();
+                .fetch();
+
+        // 관리자용 조회는 좋아요 상태를 false로 설정
+        List<FeedSimpleResponseDto> content = feeds.stream()
+                .map(feedEntity -> {
+                    FeedSimpleResponseDto feedSimpleDto = FeedSimpleResponseDto.of(feedEntity);
+                    feedSimpleDto.setLiked(false);
+                    return feedSimpleDto;
+                })
+                .collect(Collectors.toList());
 
         return new PageImpl<>(content, pageable, total);
     }
-
 
     private JPAQuery<Feed> buildFeedQuery(FeedSearchDto dto, boolean includeDeleted) {
         List<Long> genreIds = dto.getGenreIds();
@@ -96,31 +134,26 @@ public class FeedRepositoryImpl implements FeedRepository{
 
         if (genreIds != null && !genreIds.isEmpty()) {
             query.where(
-                    feedGenreCategory.genreCategory.genreCategoryId.in(genreIds)
-            );
+                    feedGenreCategory.genreCategory.genreCategoryId.in(genreIds));
         }
         if (goodsIds != null && !goodsIds.isEmpty()) {
             query.where(
-                    feedGoodsCategory.goodsCategory.goodsCategoryId.in(goodsIds)
-            );
+                    feedGoodsCategory.goodsCategory.goodsCategoryId.in(goodsIds));
         }
         if (keyword != null && !keyword.isEmpty()) {
             query.where(
                     feed.title.containsIgnoreCase(keyword)
                             .or(feed.content.containsIgnoreCase(keyword))
                             .or(feedGoodsCategory.goodsCategory.goodsCategoryName.containsIgnoreCase(keyword))
-                            .or(feedGenreCategory.genreCategory.genreCategoryName.containsIgnoreCase(keyword))
-            );
+                            .or(feedGenreCategory.genreCategory.genreCategoryName.containsIgnoreCase(keyword)));
         }
         if (status != null) {
             query.where(
-                    feed.feedStatus.eq(status)
-            );
+                    feed.feedStatus.eq(status));
         }
         if (type != null) {
             query.where(
-                    feed.feedType.eq(type)
-            );
+                    feed.feedType.eq(type));
         }
 
         if (!includeDeleted) {
@@ -128,9 +161,7 @@ public class FeedRepositoryImpl implements FeedRepository{
                     feed.feedStatus.notIn(
                             FeedStatus.DELETED,
                             FeedStatus.DELETED_BY_ADMIN,
-                            FeedStatus.STOPPED
-                    )
-            );
+                            FeedStatus.STOPPED));
         }
 
         query.orderBy(feed.createdAt.desc());
@@ -146,23 +177,35 @@ public class FeedRepositoryImpl implements FeedRepository{
                 .leftJoin(feed.feedGenreCategories, feedGenreCategory)
                 .leftJoin(feed.feedGoodsCategories, feedGoodsCategory)
                 .leftJoin(feed.feedImages, feedImage)
-                .leftJoin(feed.user, user)
-                ;
+                .leftJoin(feed.user, user);
         query.where(feed.user.userId.eq(userId));
         query.where(
                 feed.feedStatus.notIn(
                         FeedStatus.DELETED,
                         FeedStatus.DELETED_BY_ADMIN,
-                        FeedStatus.STOPPED
-                )
-        );
+                        FeedStatus.STOPPED));
         query.orderBy(feed.createdAt.desc());
         long total = query.fetchCount();
-        List<FeedSimpleResponseDto> content = query
+        List<Feed> feeds = query
                 .offset(pageable.getOffset())
                 .limit(pageable.getPageSize())
-                .fetch()
-                .stream().map(FeedSimpleResponseDto::of).toList();
+                .fetch();
+
+        // 사용자가 좋아요한 피드 ID 목록 조회
+        List<Long> likedFeedIds = queryFactory
+                .select(feedLike.feed.feedId)
+                .from(feedLike)
+                .where(feedLike.user.userId.eq(userId))
+                .fetch();
+
+        // 피드마다 좋아요 여부 설정
+        List<FeedSimpleResponseDto> content = feeds.stream()
+                .map(feedEntity -> {
+                    FeedSimpleResponseDto feedSimpleDto = FeedSimpleResponseDto.of(feedEntity);
+                    feedSimpleDto.setLiked(likedFeedIds.contains(feedEntity.getFeedId()));
+                    return feedSimpleDto;
+                })
+                .collect(Collectors.toList());
 
         return new PageImpl<>(content, pageable, total);
     }
@@ -175,13 +218,11 @@ public class FeedRepositoryImpl implements FeedRepository{
                 .leftJoin(feed.feedGenreCategories, feedGenreCategory)
                 .leftJoin(feed.feedGoodsCategories, feedGoodsCategory)
                 .leftJoin(feed.feedImages, feedImage)
-                .leftJoin(feed.user, user)
-                ;
+                .leftJoin(feed.user, user);
         query.where(feed.feedId.eq(feedId));
         Optional<Feed> findFeed = Optional.ofNullable(query.fetchOne());
         return findFeed.map(FeedDetailResponseDto::of).orElseThrow(
-                () -> new ServiceLogicException(ErrorCode.NOT_FOUND)
-        );
+                () -> new ServiceLogicException(ErrorCode.NOT_FOUND));
     }
 
     @Override
@@ -191,13 +232,11 @@ public class FeedRepositoryImpl implements FeedRepository{
                 .leftJoin(feed.feedGenreCategories, feedGenreCategory)
                 .leftJoin(feed.feedGoodsCategories, feedGoodsCategory)
                 .leftJoin(feed.feedImages, feedImage)
-                .leftJoin(feed.user, user)
-                ;
+                .leftJoin(feed.user, user);
         query.where(feed.feedId.eq(feedId));
         Optional<Feed> findFeed = Optional.ofNullable(query.fetchOne());
         return findFeed.orElseThrow(
-                () -> new ServiceLogicException(ErrorCode.NOT_FOUND)
-        );
+                () -> new ServiceLogicException(ErrorCode.NOT_FOUND));
     }
 
     @Override
@@ -225,6 +264,5 @@ public class FeedRepositoryImpl implements FeedRepository{
         feedImageJpaRepository.deleteAllByFeed_FeedIdAndImageIndexIn(feedId, imageIndex);
 
     }
-
 
 }
